<resources>
    <string name="app_name">니밥내밥</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network_text">네트워크 연결이 되어있지 않습니다.</string>
    <string name="retry">재시도</string>

    <string name="helper_invalid_nick">사용할 수 없는 닉네임입니다.</string>
    <string name="helper_valid_nick">사용 가능한 닉네임입니다.</string>
    <string name="helper_invalid_date">날짜 형식이 바르지 않습니다.</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="email_input_text">이메일을 입력해주세요.</string>
    <string name="signup_yet_text">아직 회원가입을 안하셨나요?</string>
    <string name="password_input_text">비밀번호를 입력해주세요.</string>
    <string name="do_signup_text">회원가입 하기</string>
    <string name="password">비밀번호</string>
    <string name="start_naver_text">네이버로 시작하기</string>
    <string name="auto_login">자동 로그인</string>
    <string name="my_main_title">마이페이지</string>
    <string name="my_main_gender">성별</string>
    <string name="my_main_age">연령대</string>
    <string name="my_main_location">활동지역</string>
    <string name="my_main_edit_title">프로필 수정</string>
    <string name="my_main_mylist_title">내 맛집리스트 보기</string>
    <string name="my_main_wishlist_title">내 위시리스트 보기</string>
    <string name="my_main_logout_title">로그아웃</string>
    <string name="my_main_withdraw_title">회원탈퇴</string>
    <string name="my_edit_title">프로필 수정</string>
    <string name="my_edit_done">완료</string>
    <string name="my_edit_nick">닉네임</string>
    <string name="my_edit_nick_warn">닉네임을 입력하세요.</string>
    <string name="my_edit_nick_check">닉네임 중복확인</string>
    <string name="my_edit_email">이메일</string>
    <string name="my_edit_location">활동 지역</string>
    <string name="my_edit_birth">생년월일</string>
    <string name="my_edit_birth_ph">YYYY/MM/DD</string>
    <string name="my_my_title">내 맛집 리스트</string>
    <string name="my_wish_list">내 위시 맛집 리스트</string>
    <string name="edit_change">변경하기</string>
    <string name="restaurant_detail_title">맛집 상세화면</string>
    <string name="address">주소</string>
    <string name="phone_number">전화번호</string>
    <string name="review_count">리뷰수</string>
    <string name="review">리뷰</string>
    <string name="best">최상</string>
    <string name="worst">최악</string>
    <string name="add_my_list_review">맛집 추가하기 / 리뷰하기</string>
    <string name="nickname">닉네임</string>
    <string name="parking_convenience">주차공간</string>
    <string name="taste">맛</string>
    <string name="service">서비스</string>
    <string name="cleanliness">청결도</string>
    <string name="test_review">어떻게 맛도 좋고 서비스도 좋을수가 있는거..\n대박대박 왕대박 너무 맛있어요~</string>
    <string name="when_visited">방문일자 :</string>
    <string name="menu_detail">상세보기</string>
    <string name="menu_delete">삭제하기</string>
    <string name="delete_my_list_label">맛집 삭제하기</string>
    <string name="delete_my_list">내 맛집 리스트에서 삭제하시겠습니까?</string>
    <string name="transportation_accessibility">접근성</string>
    <string name="menu_add">내 맛집 리스트에 추가</string>
    <string name="delete_my_restaurant">맛집 삭제하기</string>
    <string name="unfollow_label">언팔로우</string>
    <string name="follow_label">팔로우</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_region">지역 선택</string>
    <string name="dialog_region_select">적용</string>
    <string name="dialog_cancel">취소</string>
    <string name="bottom_address">주소</string>
    <string name="bottom_phone">전화번호</string>
    <string name="bottom_review">리뷰수</string>
    <string name="bottom_add_btn">맛집리스트 추가</string>
    <string name="bottom_review_btn">리뷰 보기</string>
    <string name="add_toolbar">맛집 추가하기</string>
    <string name="add_visit_title">방문 수단</string>
    <string name="add_visit_type1">도보/대중교통</string>
    <string name="add_visit_type2">자차</string>
    <string name="add_parking">주차공간</string>
    <string name="add_parking_no">부족하다</string>
    <string name="add_parking_yes">충분하다</string>
    <string name="add_traffic_title">교통 편리 여부</string>
    <string name="add_traffic_yes">편했다</string>
    <string name="add_traffic_no">힘들었다</string>
    <string name="add_taste_title">맛 평가</string>
    <string name="add_taste_no">맛없다</string>
    <string name="add_taste_yes">맛있다</string>
    <string name="add_service_title">서비스 상태</string>
    <string name="add_servie_no">불만족</string>
    <string name="add_service_yes">만족</string>
    <string name="add_toilet_title">화장실 상태</string>
    <string name="add_toilet_no">더럽다</string>
    <string name="add_toilet_yes">깨끗하다</string>
    <string name="add_total">총평</string>
    <string name="add_total_hint">20자 이상 작성해주세요</string>
    <string name="add_btn">리뷰 남기기</string>
    <string name="info_toolbar">상세 정보 입력</string>
    <string name="info_nick">닉네임</string>
    <string name="info_nick_ph">닉네임을 입력하세요.</string>
    <string name="info_gender">성별</string>
    <string name="gender_man">남자</string>
    <string name="gender_woman">여자</string>
    <string name="info_location_hint">지역을 선택하세요.</string>
    <string name="info_register">회원가입</string>
    <string name="follow_title">팔로우/팔로잉</string>
    <string name="follow_recommend">추천 친구\t</string>
    <string name="follow_follower">팔로워</string>
    <string name="follow_following">팔로잉</string>
    <string name="follow_search_hint">닉네임/ 이름으로 검색하세요</string>
    <string name="follow_search_location">지역\t</string>
    <string name="search_restaurant_title">음식점 이름을 검색하세요.</string>
    <string name="search_none">검색 결과가 없습니다.</string>
    <string name="mylist_empty">추가한 내 맛집이 없습니다.</string>
    <string name="wishlist_empty">추가한 위시 맛집이 없습니다.</string>
    <string name="filter_old">오래된순</string>
    <string name="filter_new">최신순</string>
    <string name="filter_best">추천순</string>
    <string name="filter_worst">비추천순</string>
    <string name="today_recommend_restaurant">오늘의 추천 음식점</string>
    <string name="toolbar_review">리뷰 전체보기</string>
    <string name="detail_review_all"><![CDATA[전체보기 >]]></string>
    <string name="user_detail_empty">아직 추가한 맛집이 없습니다.</string>
    <string name="phone_number_empty">전화번호 없음</string>
    <string name="no_recommend_restaurant">\n\n추천드릴 음식점이 존재하지 않습니다.\n\n</string>
    <string name="add_photo_option">(선택) 사진 등록</string>
    <string name="check_email_duplicate">이메일 중복확인</string>
    <string name="next">다음</string>
    <string name="input_basic_information">기본 정보 입력</string>
    <string name="check_password">비밀번호 확인</string>

    <string-array name="location_list">
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중랑구</item>
    </string-array>

</resources>